--- a/app/functions/package.json
+++ b/app/functions/package.json
@@ -5,59 +5,16 @@
     "firebase-admin": "^5.0.1",
     "firebase-functions": "^0.6.1",
     "nuxt": "^1.0.0-rc3",
-    "@nuxtjs/youch": "3.0.1",
-    "ansi-html": "^0.0.7",
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-vue-app": "^1.2.0",
     "babel-runtime": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "chalk": "^2.0.1",
-    "chokidar": "^1.7.0",
-    "clone": "^2.1.1",
-    "compression": "^1.7.0",
-    "connect": "^3.6.3",
-    "css-loader": "^0.28.4",
+    "vue-router": "^2.7.0",
+    "lodash": "^4.17.4",
+    "vue": "~2.4.2",
+    "vue-meta": "^1.0.5",
     "debug": "^2.6.8",
     "es6-promise": "^4.1.1",
-    "etag": "^1.8.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "fresh": "^0.5.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "fs-extra": "^4.0.1",
-    "glob": "^7.1.2",
-    "hash-sum": "^1.0.2",
-    "html-minifier": "^3.5.3",
-    "html-webpack-plugin": "^2.30.1",
-    "lodash": "^4.17.4",
-    "memory-fs": "^0.4.1",
-    "minimist": "^1.2.0",
-    "opencollective": "^1.0.3",
-    "pify": "^3.0.0",
-    "pretty-error": "^2.1.1",
-    "progress-bar-webpack-plugin": "^1.10.0",
-    "serialize-javascript": "^1.4.0",
-    "serve-static": "^1.12.3",
-    "server-destroy": "^1.0.1",
-    "source-map": "^0.5.6",
-    "source-map-support": "^0.4.15",
-    "tappable": "^1.1.0",
-    "url-loader": "^0.5.9",
-    "vue": "~2.4.2",
-    "vue-loader": "^13.0.4",
-    "vue-meta": "^1.0.5",
     "vue-router": "^2.7.0",
-    "vue-server-renderer": "~2.4.2",
-    "vue-template-compiler": "~2.4.2",
-    "vuex": "^2.3.1",
-    "webpack": "^3.4.1",
-    "webpack-bundle-analyzer": "^2.8.3",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-node-externals": "^1.6.0"
+    "clone": "^2.1.1"
   },
   "private": true
 }
