--- a/package.json
+++ b/package.json
@@ -3,28 +3,9 @@
   "version": "1.0.0",
   "description": "Host Next.js SSR app on Firebase Cloud Functions with Firebase Hosting redirects.",
   "license": "MIT",
-  "author": "James Hegedus",
-  "repository": "https://github.com/jthegedus/firebase-functions-nuxt-example.git",
-  "dependencies": {
-    "nuxt": "^1.0.0-rc3",
-    "es6-promise": "^4.1.1",
-    "core-js": "2.5.0"
-  },
-  "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "es6-promise": "^4.1.1",
-    "eslint": "^4.3.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
-  },
+  "author": "David Royer",
+  "repository": "",
+  "dependencies": {},
   "scripts": {
     "fireserve": "firebase serve --only functions,hosting",
     "dev": "nuxt",
