--- a/app/functions/package.json
+++ b/app/functions/package.json
@@ -7,6 +7,7 @@
     "nuxt": "^1.0.0-rc3",
     "babel-runtime": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
     "vue-router": "^2.7.0",
     "lodash": "^4.17.4",
     "vue": "~2.4.2",
