--- a/app/src/package.json
+++ b/app/src/package.json
@@ -6,13 +6,16 @@
   "author": "David Royer",
   "repository": "https://github.com/jthegedus/firebase-functions-nuxt-example.git",
   "dependencies": {
-    "nuxt": "^1.0.0-rc3",
-    "es6-promise": "^4.1.1",
+    "@nuxtjs/bulma": "^1.0.2",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "es6-promise": "^4.1.1",
+    "nuxt": "^1.0.0-rc3",
+    "vuetify": "^0.14.8"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
     "es6-promise": "^4.1.1",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
@@ -21,8 +24,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "eslint-plugin-standard": "^3.0.1"
   },
   "scripts": {
     "dev": "nuxt",
