--- a/app/src/package.json
+++ b/app/src/package.json
@@ -12,6 +12,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "es6-promise": "^4.1.1",
     "nuxt": "^1.0.0-rc3",
+    "vue-server-renderer": "2.4.2",
     "vuetify": "^0.14.8"
   },
   "devDependencies": {
@@ -30,6 +31,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "precommit": "npm run lint"
   }
 }
