--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "deploy": "firebase deploy"
+  },
+  "devDependencies": {
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
   }
 }
