--- a/app/src/package.json
+++ b/app/src/package.json
@@ -7,12 +7,12 @@
   "repository": "https://github.com/jthegedus/firebase-functions-nuxt-example.git",
   "dependencies": {
     "@nuxtjs/bulma": "^1.0.2",
+    "@nuxtjs/pwa": "^0.2.0",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
     "es6-promise": "^4.1.1",
     "nuxt": "^1.0.0-rc3",
-    "vue-server-renderer": "2.4.2",
     "vuetify": "^0.14.8"
   },
   "devDependencies": {
@@ -25,7 +25,9 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
   },
   "scripts": {
     "dev": "nuxt",
