--- a/prod/server/package.json
+++ b/prod/server/package.json
@@ -8,6 +8,7 @@
     "clone": "^2.1.1",
     "debug": "^2.6.8",
     "es6-promise": "^4.1.1",
+    "express": "^4.15.4",
     "firebase-admin": "^5.0.1",
     "firebase-functions": "^0.6.1",
     "lodash": "^4.17.4",
@@ -15,8 +16,8 @@
     "vue": "~2.4.2",
     "vue-meta": "^1.0.5",
     "vue-router": "^2.7.0",
-    "vuex": "^2.3.1",
-    "vuetify": "^0.14.8"
+    "vuetify": "^0.14.8",
+    "vuex": "^2.3.1"
   },
   "private": true
 }
