--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "setup": "yarn build:all",
     "fireserve": "firebase serve --only functions,hosting",
     "dev": "cd \"src\" && yarn nuxt",
-    "build:client": "cd \"src\" && yarn nuxt build && yarn copyassets",
-    "build:server": "cd \"prod/server\" && yarn",
-    "build:all": "yarn build:client && yarn build:server",
+    "build-client": "cd \"src\" && yarn nuxt build && yarn copyassets",
+    "build-server": "cd \"prod/server\" && yarn",
+    "build-all": "yarn build:client && yarn build:server",
     "start": "cd \"src\" && yarn nuxt start",
     "generate": "cd \"src\" && yarn nuxt generate",
     "deploy": "firebase deploy",
